--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_footer-default.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_footer-default.scss
@@ -1,11 +1,11 @@
 .contact-list-footer {
-	[class*="icon-"]:before {
+	[class*="micon-"]:before {
 		margin-right: 0.4em;		
 		display: inline-block;
 		text-align: center;
 		width: 1em;
 	}
-	.icon-facebook:before {
+	.micon-facebook:before {
 		margin-right: 0.1em;
 	}
 }	
