--- a/wp/wp-content/themes/leprojo-2013/assets/scss/_foundation.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/_foundation.scss
@@ -12,7 +12,7 @@
 // @import "foundation/components/block-grid";
 @import "foundation/components/type";
 @import "foundation/components/buttons";
-// @import "foundation/components/forms";
+@import "foundation/components/forms";
 // @import "foundation/components/button-groups";
 // @import "foundation/components/dropdown-buttons";
 // @import "foundation/components/split-buttons";
