--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
@@ -23,13 +23,9 @@
 		width: 100%;
 	}
 	figcaption{
+		@extend h6;
 		font-family: $sansFontFamilyLight;
-		text-align: center;
-		font-size: 1.5em;
-		line-height: 2em;
 		margin: 1em 0;
-		border-top: 1px solid $gray;
-		border-bottom: 1px solid $gray;
 	}
 }
 
