--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
@@ -1,13 +1,11 @@
 .entry-title{
 	position: absolute;
+	display: inline-block;
+	width: 50%;
 	font-size: 2em;
 	text-transform: uppercase;
-	bottom: 10%;
-	width: 100%;
-	padding: 0 1em;
 	font-family: $sansFontFamilyLight;
 	color: $banner-font-color;
-	position: absolute;
 }
 
 .entry-content{
@@ -83,29 +81,29 @@
 
 @media screen and (min-width: 600px){
 	.entry-title{
-		font-size: 3em;
-		bottom: 5%;
+		// font-size: 3em;
+		// bottom: 5%;
 	}
 }
 
 
 @media #{$small}{
 	.entry-title{
-		font-size: 4em;
+		// font-size: 4em;
 	}
 }
 @media #{$topbar-media-query} {
 	.entry-title{
-		font-size: 6em;
+		// font-size: 6em;
 	}
 }
 @media #{$medium}{
 	.entry-title{
-		font-size: 8em;
+		// font-size: 8em;
 	}
 }
 @media #{$large}{
 	.entry-title{
-		font-size: 10em;
+		// font-size: 10em;
 	}
 }
