--- a/wp/wp-content/themes/leprojo-2013/assets/css/style.css
+++ b/wp/wp-content/themes/leprojo-2013/assets/css/style.css
@@ -3450,7 +3450,7 @@ label.error {
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/custom\/_helpers\.scss}line{font-family:\0000322}}
-.unstyled {
+.unstyled, .team {
   list-style-type: none;
 }
 
@@ -4787,6 +4787,21 @@ but it's slower:
     font-size: 5em;
   }
 }
+@media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/custom\/_about\.scss}line{font-family:\000031}}
+.team {
+  margin-top: 1em;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/custom\/_about\.scss}line{font-family:\000036}}
+.team-member {
+  margin-bottom: 2em;
+  line-height: 1.25em;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/custom\/_about\.scss}line{font-family:\000039}}
+.team-member figure {
+  margin-bottom: 0.5em;
+}
+
 /* Start to customize Reverie */
 
 /*# sourceMappingURL=style.css.map */
