--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_interview.scss
@@ -28,7 +28,9 @@
 	}
 }
 
-
+.block-itw ul{
+	@extend .unstyled;
+}
 /*========================================
 =            INTERVIEW LAYOUT            =
 ========================================*/
@@ -76,34 +78,4 @@
 	margin-bottom: 0;
 	background-color: $grayLighter;
 	padding: 1.25em;
-}
-
-
-@media screen and (min-width: 600px){
-	.entry-title{
-		// font-size: 3em;
-		// bottom: 5%;
-	}
-}
-
-
-@media #{$small}{
-	.entry-title{
-		// font-size: 4em;
-	}
-}
-@media #{$topbar-media-query} {
-	.entry-title{
-		// font-size: 6em;
-	}
-}
-@media #{$medium}{
-	.entry-title{
-		// font-size: 8em;
-	}
-}
-@media #{$large}{
-	.entry-title{
-		// font-size: 10em;
-	}
 }
