--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_about.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_about.scss
@@ -13,7 +13,9 @@
 
 
 // overload layout for block-itw
-.block-itw,
-.block-itw:last-child{
-	margin-left: 0;
+.page-template-template-about-php{
+	.block-itw,
+	.block-itw:last-child{
+		margin-left: 0;
+	}
 }
