Overload layout for q-and-a and block-itw in ABOUT

--- a/wp/wp-content/themes/leprojo-2013/assets/css/style.css
+++ b/wp/wp-content/themes/leprojo-2013/assets/css/style.css
@@ -580,7 +580,7 @@ select {
   clear: both;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/foundation\/components\/_grid-5\.scss}line{font-family:\00003131}}
-.row.collapse .column, .collapse.main .column, .collapse.main-content .column, .collapse.banner .column, .row.collapse .img-itw, .collapse.main .img-itw, .collapse.main-content .img-itw, .collapse.banner .img-itw,
+.row.collapse .column, .collapse.main .column, .collapse.main-content .column, .collapse.banner .column, .row.collapse .img-itw, .collapse.main .img-itw, .collapse.main-content .img-itw, .collapse.banner .img-itw, .row.collapse .q-and-a-about, .collapse.main .q-and-a-about, .collapse.main-content .q-and-a-about, .collapse.banner .q-and-a-about,
 .row.collapse .columns,
 .collapse.main .columns,
 .collapse.main-content .columns,
@@ -661,7 +661,7 @@ select {
 }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/foundation\/components\/_grid-5\.scss}line{font-family:\00003140}}
-.column, .img-itw,
+.column, .img-itw, .q-and-a-about,
 .columns,
 .page-intro,
 .entry-content,
@@ -736,7 +736,7 @@ select {
   }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/foundation\/components\/_grid-5\.scss}line{font-family:\00003146}}
-  .small-12, .entry-content, .img-itw {
+  .small-12, .entry-content, .img-itw, .q-and-a-about {
     width: 100%;
   }
 
@@ -806,7 +806,7 @@ select {
   }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/foundation\/components\/_grid-5\.scss}line{font-family:\00003156}}
-  .column.small-centered, .small-centered.img-itw,
+  .column.small-centered, .small-centered.img-itw, .small-centered.q-and-a-about,
   .columns.small-centered,
   .small-centered.page-intro,
   .small-centered.entry-content,
@@ -862,7 +862,7 @@ select {
   .medium-8, .intro-itw,
   .block-itw-first,
   .block-itw,
-  .block-itw-last {
+  .block-itw-last, .q-and-a-about {
     width: 66.66667%;
   }
 
@@ -1079,7 +1079,7 @@ select {
   }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/foundation\/components\/_grid-5\.scss}line{font-family:\00003175}}
-  .column.medium-centered, .medium-centered.img-itw,
+  .column.medium-centered, .medium-centered.img-itw, .medium-centered.q-and-a-about,
   .columns.medium-centered,
   .medium-centered.page-intro,
   .medium-centered.entry-content,
@@ -1096,7 +1096,7 @@ select {
   }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/foundation\/components\/_grid-5\.scss}line{font-family:\00003178}}
-  .column.medium-uncentered, .medium-uncentered.img-itw,
+  .column.medium-uncentered, .medium-uncentered.img-itw, .medium-uncentered.q-and-a-about,
   .columns.medium-uncentered,
   .medium-uncentered.page-intro,
   .medium-uncentered.entry-content,
@@ -1142,7 +1142,7 @@ select {
   .large-6, .intro-itw,
   .block-itw-first,
   .block-itw,
-  .block-itw-last {
+  .block-itw-last, .q-and-a-about {
     width: 50%;
   }
 
@@ -1369,7 +1369,7 @@ select {
   }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/foundation\/components\/_grid-5\.scss}line{font-family:\00003202}}
-  .column.large-centered, .large-centered.img-itw,
+  .column.large-centered, .large-centered.img-itw, .large-centered.q-and-a-about,
   .columns.large-centered,
   .large-centered.page-intro,
   .large-centered.entry-content,
@@ -1386,7 +1386,7 @@ select {
   }
 
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/foundation\/components\/_grid-5\.scss}line{font-family:\00003205}}
-  .column.large-uncentered, .large-uncentered.img-itw,
+  .column.large-uncentered, .large-uncentered.img-itw, .large-uncentered.q-and-a-about,
   .columns.large-uncentered,
   .large-uncentered.page-intro,
   .large-uncentered.entry-content,
@@ -2112,7 +2112,7 @@ form .row .row, form .main .row, form .main-content .row, form .banner .row, for
   margin: 0 -0.5em;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/foundation\/components\/_forms\.scss}line{font-family:\0000369}}
-form .row .row .column, form .main .row .column, form .main-content .row .column, form .banner .row .column, form .row .main .column, form .main .main .column, form .main-content .main .column, form .banner .main .column, form .row .main-content .column, form .main .main-content .column, form .main-content .main-content .column, form .banner .main-content .column, form .row .banner .column, form .main .banner .column, form .main-content .banner .column, form .banner .banner .column, form .row .row .img-itw, form .main .row .img-itw, form .main-content .row .img-itw, form .banner .row .img-itw, form .row .main .img-itw, form .main .main .img-itw, form .main-content .main .img-itw, form .banner .main .img-itw, form .row .main-content .img-itw, form .main .main-content .img-itw, form .main-content .main-content .img-itw, form .banner .main-content .img-itw, form .row .banner .img-itw, form .main .banner .img-itw, form .main-content .banner .img-itw, form .banner .banner .img-itw,
+form .row .row .column, form .main .row .column, form .main-content .row .column, form .banner .row .column, form .row .main .column, form .main .main .column, form .main-content .main .column, form .banner .main .column, form .row .main-content .column, form .main .main-content .column, form .main-content .main-content .column, form .banner .main-content .column, form .row .banner .column, form .main .banner .column, form .main-content .banner .column, form .banner .banner .column, form .row .row .img-itw, form .main .row .img-itw, form .main-content .row .img-itw, form .banner .row .img-itw, form .row .main .img-itw, form .main .main .img-itw, form .main-content .main .img-itw, form .banner .main .img-itw, form .row .main-content .img-itw, form .main .main-content .img-itw, form .main-content .main-content .img-itw, form .banner .main-content .img-itw, form .row .banner .img-itw, form .main .banner .img-itw, form .main-content .banner .img-itw, form .banner .banner .img-itw, form .row .row .q-and-a-about, form .main .row .q-and-a-about, form .main-content .row .q-and-a-about, form .banner .row .q-and-a-about, form .row .main .q-and-a-about, form .main .main .q-and-a-about, form .main-content .main .q-and-a-about, form .banner .main .q-and-a-about, form .row .main-content .q-and-a-about, form .main .main-content .q-and-a-about, form .main-content .main-content .q-and-a-about, form .banner .main-content .q-and-a-about, form .row .banner .q-and-a-about, form .main .banner .q-and-a-about, form .main-content .banner .q-and-a-about, form .banner .banner .q-and-a-about,
 form .row .row .columns,
 form .main .row .columns,
 form .main-content .row .columns,
@@ -2280,7 +2280,7 @@ form .row .row.collapse, form .main .row.collapse, form .main-content .row.colla
   margin: 0;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/foundation\/components\/_forms\.scss}line{font-family:\0000375}}
-form .row .row.collapse .column, form .main .row.collapse .column, form .main-content .row.collapse .column, form .banner .row.collapse .column, form .row .collapse.main .column, form .main .collapse.main .column, form .main-content .collapse.main .column, form .banner .collapse.main .column, form .row .collapse.main-content .column, form .main .collapse.main-content .column, form .main-content .collapse.main-content .column, form .banner .collapse.main-content .column, form .row .collapse.banner .column, form .main .collapse.banner .column, form .main-content .collapse.banner .column, form .banner .collapse.banner .column, form .row .row.collapse .img-itw, form .main .row.collapse .img-itw, form .main-content .row.collapse .img-itw, form .banner .row.collapse .img-itw, form .row .collapse.main .img-itw, form .main .collapse.main .img-itw, form .main-content .collapse.main .img-itw, form .banner .collapse.main .img-itw, form .row .collapse.main-content .img-itw, form .main .collapse.main-content .img-itw, form .main-content .collapse.main-content .img-itw, form .banner .collapse.main-content .img-itw, form .row .collapse.banner .img-itw, form .main .collapse.banner .img-itw, form .main-content .collapse.banner .img-itw, form .banner .collapse.banner .img-itw,
+form .row .row.collapse .column, form .main .row.collapse .column, form .main-content .row.collapse .column, form .banner .row.collapse .column, form .row .collapse.main .column, form .main .collapse.main .column, form .main-content .collapse.main .column, form .banner .collapse.main .column, form .row .collapse.main-content .column, form .main .collapse.main-content .column, form .main-content .collapse.main-content .column, form .banner .collapse.main-content .column, form .row .collapse.banner .column, form .main .collapse.banner .column, form .main-content .collapse.banner .column, form .banner .collapse.banner .column, form .row .row.collapse .img-itw, form .main .row.collapse .img-itw, form .main-content .row.collapse .img-itw, form .banner .row.collapse .img-itw, form .row .collapse.main .img-itw, form .main .collapse.main .img-itw, form .main-content .collapse.main .img-itw, form .banner .collapse.main .img-itw, form .row .collapse.main-content .img-itw, form .main .collapse.main-content .img-itw, form .main-content .collapse.main-content .img-itw, form .banner .collapse.main-content .img-itw, form .row .collapse.banner .img-itw, form .main .collapse.banner .img-itw, form .main-content .collapse.banner .img-itw, form .banner .collapse.banner .img-itw, form .row .row.collapse .q-and-a-about, form .main .row.collapse .q-and-a-about, form .main-content .row.collapse .q-and-a-about, form .banner .row.collapse .q-and-a-about, form .row .collapse.main .q-and-a-about, form .main .collapse.main .q-and-a-about, form .main-content .collapse.main .q-and-a-about, form .banner .collapse.main .q-and-a-about, form .row .collapse.main-content .q-and-a-about, form .main .collapse.main-content .q-and-a-about, form .main-content .collapse.main-content .q-and-a-about, form .banner .collapse.main-content .q-and-a-about, form .row .collapse.banner .q-and-a-about, form .main .collapse.banner .q-and-a-about, form .main-content .collapse.banner .q-and-a-about, form .banner .collapse.banner .q-and-a-about,
 form .row .row.collapse .columns,
 form .main .row.collapse .columns,
 form .main-content .row.collapse .columns,
@@ -2444,7 +2444,7 @@ form .banner .collapse.banner .img-itw {
   padding: 0;
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/foundation\/components\/_forms\.scss}line{font-family:\0000380}}
-form .row input.column, form .main input.column, form .main-content input.column, form .banner input.column, form .row input.img-itw, form .main input.img-itw, form .main-content input.img-itw, form .banner input.img-itw,
+form .row input.column, form .main input.column, form .main-content input.column, form .banner input.column, form .row input.img-itw, form .main input.img-itw, form .main-content input.img-itw, form .banner input.img-itw, form .row input.q-and-a-about, form .main input.q-and-a-about, form .main-content input.q-and-a-about, form .banner input.q-and-a-about,
 form .row input.columns,
 form .main input.columns,
 form .main-content input.columns,
@@ -2493,6 +2493,10 @@ form .row textarea.img-itw,
 form .main textarea.img-itw,
 form .main-content textarea.img-itw,
 form .banner textarea.img-itw,
+form .row textarea.q-and-a-about,
+form .main textarea.q-and-a-about,
+form .main-content textarea.q-and-a-about,
+form .banner textarea.q-and-a-about,
 form .row textarea.columns,
 form .main textarea.columns,
 form .main-content textarea.columns,
@@ -4817,11 +4821,12 @@ p.no-margin-bottom {
   max-width: 215px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/custom\/_about\.scss}line{font-family:\0000320}}
-.page-template-template-about-php .block-itw, .page-template-template-about-php .block-itw-last,
-.page-template-template-about-php .block-itw:last-child,
-.page-template-template-about-php .block-itw-last:last-child {
+@media -sass-debug-info{filename{font-family:file\:\/\/F\:\/Dropbox\/Web\/WAMP\/www\/leprojo\/wp\/wp-content\/themes\/leprojo-2013\/assets\/scss\/custom\/_about\.scss}line{font-family:\0000328}}
+.q-and-a-about .block-itw, .q-and-a-about .block-itw-last,
+.q-and-a-about .block-itw:last-child,
+.q-and-a-about .block-itw-last:last-child {
   margin-left: 0;
+  width: 100%;
 }
 
 /* Start to customize Reverie */
