--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_about.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_about.scss
@@ -15,10 +15,19 @@
 }
 
 
-// overload layout for block-itw
-.page-template-template-about-php{
+// overload layout for q-and-a and block-itw in ABOUT
+//we want to have to distinct areas : one sidebar on the left and one content floating
+//whereas the default layout simply drops block-itw on top of each other, altenating with full-width pictures and quotes
+
+.q-and-a-about{
+	@extend .column;
+	@extend .small-12;
+	@extend .medium-8;
+	@extend .large-6;
+	
 	.block-itw,
 	.block-itw:last-child{
 		margin-left: 0;
+		width: 100%;
 	}
 }
