--- a/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_about.scss
+++ b/wp/wp-content/themes/leprojo-2013/assets/scss/custom/_about.scss
@@ -24,8 +24,10 @@
 	@extend .small-12;
 	@extend .medium-8;
 	@extend .large-6;
-	
+	margin-bottom: 2em;
+
 	.block-itw,
+	.block-itw-first,
 	.block-itw:last-child{
 		margin-left: 0;
 		width: 100%;
